# simd-utf16-len

./: Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml  codspeed.yml  publish.yml
benches/: utf16_len.rs
examples/: bench_compare.rs
src/: aarch64.rs  lib.rs  scalar.rs  wasm32.rs  x86_64.rs
