[package]
name = "simd-utf16-len"
version = "0.1.0"
edition = "2024"
description = "SIMD-accelerated UTF-16 length calculation from UTF-8 strings"
license = "MIT"
repository = "https://github.com/SyMind/simd-utf16-len"

[dependencies]

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7" }

[[bench]]
name = "utf16_len"
harness = false
